; ModuleID = '/home/carl/AnghaBench/jq/src/extr_compile.c_gen_condbranch.c'
source_filename = "/home/carl/AnghaBench/jq/src/extr_compile.c_gen_condbranch.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@JUMP = common dso_local global i32 0, align 4
@JUMP_F = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @gen_condbranch(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %3, align 4
  %6 = load i32, i32* @JUMP, align 4
  %7 = load i32, i32* %4, align 4
  %8 = call i32 @gen_op_target(i32 %6, i32 %7)
  %9 = call i32 (i32, i32, ...) @BLOCK(i32 %5, i32 %8)
  store i32 %9, i32* %3, align 4
  %10 = load i32, i32* @JUMP_F, align 4
  %11 = load i32, i32* %3, align 4
  %12 = call i32 @gen_op_target(i32 %10, i32 %11)
  %13 = load i32, i32* %3, align 4
  %14 = load i32, i32* %4, align 4
  %15 = call i32 (i32, i32, ...) @BLOCK(i32 %12, i32 %13, i32 %14)
  ret i32 %15
}

declare dso_local i32 @BLOCK(i32, i32, ...) #1

declare dso_local i32 @gen_op_target(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
